# CSCI3360

./: .gitignore  pyproject.toml
csci3363/: app.py
csci3363/ai/: tools.py  utils.py
csci3363/prompts/: analyze.txt  analyze_v2.txt
frontend/: package-lock.json  package.json
frontend/app/: constants.ts  layout.tsx  page.tsx
frontend/components/chatroom/: room.tsx
frontend/components/ui/: csvuploader.tsx  messagebubble.tsx  messageskeleton.tsx  vegachart.tsx
static/: index.html  script.js  style.css
tests/: test_query_v2.py  test_query_v2_car.py
