[tool.poetry]
name = "csci3360"
version = "0.1.0"
description = ""
authors = ["ahnsv <ahnsv@bc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
openai = "^1.43.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "UP", "T20"]
ignore = [
    "F841", # remove unused variables
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = [
    "F401", # remove unused import
]
"scripts/*" = [
    "T20"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
